revamp gradle project structure completely