@@ -1,56 +1,48 @@
 plugins {
-    id("java-library")
-    id("idea")
-    id("net.neoforged.gradle.userdev") version "7.0.165"
+    id("net.neoforged.moddev") version "2.0.78"
 }
 
-val MOD_VERSION: String by rootProject.extra
-val MOD_ID: String by rootProject.extra
-val MOD_NAME: String by rootProject.extra
+dependencies {
+    implementation(project.project(":common").sourceSets.getByName("main").output)
 
-val MINECRAFT_VERSION: String by rootProject.extra
-val MINECRAFT_VERSION_RANGE: String by rootProject.extra
-val PARCHMENT_VERSION: String by rootProject.extra
-val PARCHMENT_MC_VERSION: String by rootProject.extra
+    implementation("maven.modrinth:farmers-delight:${rootProject.properties["fd_version"]}")
+}
 
-val NEOFORGE_VERSION: String by rootProject.extra
-val NEOFORGE_VERSION_RANGE: String by rootProject.extra
+neoForge {
+    version = rootProject.properties["neoforge_version"].toString()
 
-val FD_NEO_VERSION: String by rootProject.extra
+    parchment {
+        minecraftVersion = rootProject.properties["parchment_version"].toString().split(":").first()
+        mappingsVersion = rootProject.properties["parchment_version"].toString().split(":").last()
+    }
 
-repositories {
-    mavenLocal()
-
-    exclusiveContent {
-        forRepository {
-            maven("https://api.modrinth.com/maven") {
-                name = "Modrinth"
-            }
+    runs {
+        val vmArgs = arrayOf("-XX:+UseZGC", "-XX:+IgnoreUnrecognizedVMOptions", "-XX:+AllowEnhancedClassRedefinition", "-Xms500M", "-Xmx2G")
+        create("Client") {
+            client()
+            gameDirectory = rootDir.resolve("run/client")
+            jvmArguments.addAll(*vmArgs)
         }
-        filter {
-            includeGroup("maven.modrinth")
+        create("Server") {
+            server()
+            gameDirectory = rootDir.resolve("run/server")
+            jvmArguments.addAll(*vmArgs)
         }
     }
-}
 
-subsystems {
-    parchment {
-        minecraftVersion = PARCHMENT_MC_VERSION
-        mappingsVersion = PARCHMENT_VERSION
+    mods {
+        create(rootProject.properties["mod_id"].toString()) {
+            sourceSet(sourceSets.main.get())
+        }
     }
 }
 
 tasks {
     jar {
         // add common code to jar
-        val main = project.project(":common").sourceSets.getByName("main")
+        val main = project.project(":common").sourceSets.main.get()
         from(main.output.classesDirs)
         from(main.output.resourcesDir)
-    }
-
-    // put all artifacts in the right directory
-    withType<Jar> {
-        destinationDirectory = rootDir.resolve("build").resolve("libs_neoforge")
     }
 
     named("compileTestJava").configure {
@@ -60,57 +52,97 @@ tasks {
     // NeoGradle compiles the game, but we don't want to add our common code to the game's code
     val notNeoTask: (Task) -> Boolean = { !it.name.startsWith("neo") && !it.name.startsWith("compileService") }
 
+    // add common code & javadoc to built jars (except for NeoGradle jars)
     withType<JavaCompile>().matching(notNeoTask).configureEach {
         source(project(":common").sourceSets.main.get().allSource)
     }
-
     withType<Javadoc>().matching(notNeoTask).configureEach {
-        source(project(":common").sourceSets.main.get().allJava)
+        source(project(":common").sourceSets.main.get().allSource)
     }
 
     withType<ProcessResources>().matching(notNeoTask).configureEach {
+        // include common resources
         from(project(":common").sourceSets.main.get().resources)
 
-        val replaceProperties = mapOf(
-            "minecraft_version" to MINECRAFT_VERSION,
-            "minecraft_version_range" to MINECRAFT_VERSION_RANGE,
-            "neo_version" to NEOFORGE_VERSION,
-            "neo_version_range" to NEOFORGE_VERSION_RANGE,
-            "loader_version_range" to "*",
-            "mod_id" to MOD_ID,
-            "mod_name" to MOD_NAME,
-            "mod_license" to "LGPL 3.0 or later",
-            "mod_version" to MOD_VERSION,
-            "mod_authors" to "Player005, SayWhatSayMon",
-            "mod_description" to ""
-        )
+        // the properties listed here can be used in the mods.toml
+        val properties =
+            listOf(
+                "mc_versions_neo", "neo_loader_version_range", "mod_version", "mod_id", "mod_name",
+                "mod_description", "mod_authors", "mod_license"
+            )
+
+        // store a map of the properties so the configuration cache can be used
+        val map = mutableMapOf<String, String>()
+        properties.forEach { map[it] = rootProject.properties[it].toString() }
+        inputs.property("property_map", map)
 
         filesMatching("META-INF/neoforge.mods.toml") {
-            expand(replaceProperties)
+            @Suppress("UNCHECKED_CAST")
+            expand(inputs.properties["property_map"] as Map<String, String>)
+        }
+
+        // do fluid unit conversions and unified load condition processing if enabled
+        // see `Platform conversions.md` for more information
+        inputs.property("convert_fluid_units", rootProject.properties["convert_fluid_units"] == "true")
+        inputs.property("unified_load_conditions", rootProject.properties["unified_load_conditions"] == "true")
+
+        filesMatching("data/**/*.json") {
+            if (inputs.properties["convert_fluid_units"] as Boolean)
+                filter(FabricConversions.fluidUnitConverter)
+            if (inputs.properties["unified_load_conditions"] as Boolean)
+                filter(FabricConversions.unifiedLoadConditionProcessor)
         }
     }
 }
 
-runs {
-    configureEach {
-        modSource(project.sourceSets.main.get())
+
+@Suppress("NULLABILITY_MISMATCH_BASED_ON_JAVA_ANNOTATIONS")
+object FabricConversions {
+
+    val fluidUnitConverter = Transformer<String?, String> { line ->
+        var result = line.replace(""""(\d*\.?\d*)_millibuckets"""".toRegex(), "$1")
+        val regex = """"(\d*\.?\d*)_droplets"""".toRegex()
+        regex.find(line)?.let { result = result.replace(regex, (it.groups[1]!!.value.toInt() / 81).toString()) }
+        result
     }
-    create("client") {
-        client()
-        shouldExportToIDE(true)
+
+    val unifiedLoadConditionProcessor = Transformer<String?, String> { line ->
+        // I am very sorry for anyone who tries to read or understand this
+        line.replace(
+            """^(\s*)"load_conditions":""".toRegex(),
+            "$1\"neoforge:conditions\":"
+        )
+            .replace(
+                """^(\s*\{?\s*)"condition":\s*"mod_loaded"""".toRegex(),
+                "$1\"type\": \"neoforge:mod_loaded\""
+            )
+            .replace(
+                """^(\s*)"mod":\s*"(.*)"""".toRegex(),
+                "$1\"modid\": \"$2\""
+            )
+            .replace(
+                """^(\s*\{?\s*)"condition":\s*"and"""".toRegex(),
+                "$1\"type\": \"neoforge:and\""
+            )
+            .replace(
+                """^(\s*\{?\s*)"condition":\s*"or"""".toRegex(),
+                "$1\"type\": \"neoforge:or\""
+            )
+            .replace(
+                """^(\s*\{?\s*)"condition":\s*"is_fabric"""".toRegex(),
+                "$1\"type\": \"neoforge:false\""
+            )
+            .replace(
+                """^(\s*\{?\s*)"condition":\s*"is_neoforge"""".toRegex(),
+                "$1\"type\": \"neoforge:true\""
+            )
+            .replace(
+                """^(\s*\{?\s*)"condition":\s*"true"""".toRegex(),
+                "$1\"type\": \"neoforge:true\""
+            )
+            .replace(
+                """^(\s*\{?\s*)"condition":\s*"false"""".toRegex(),
+                "$1\"type\": \"neoforge:false\""
+            )
     }
 }
-
-dependencies {
-    implementation("net.neoforged:neoforge:${NEOFORGE_VERSION}")
-
-    implementation(project.project(":common").sourceSets.getByName("main").output)
-
-    implementation("maven.modrinth:farmers-delight:$FD_NEO_VERSION")
-}
-
-accessTransformers {
-    file("src/main/resources/META-INF/accesstransformer.cfg")
-}
-
-java.toolchain.languageVersion = JavaLanguageVersion.of(21)
